Add weight decay to improve accuracy

--- a/training_validation/ModelTrainVal.ipynb
+++ b/training_validation/ModelTrainVal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "4a21a61d",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "id": "932b030b",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "427e497a",
    "metadata": {},
    "outputs": [],
@@ -78,13 +78,13 @@
     "val_dataset = HousePriceDataset(X_test, Y_test)\n",
     "\n",
     "# Higher batch size for efficient parallel compute training (cuda) on gpu\n",
-    "train_loader = DataLoader(train_dataset, batch_size=1024, shuffle=True)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=1024)"
+    "train_loader = DataLoader(train_dataset, batch_size=128, shuffle=True)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=128)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "9b1d52e4",
    "metadata": {},
    "outputs": [],
@@ -95,12 +95,12 @@
     "model = HousePricePredictor(input_dim=model_inp)\n",
     "model.to(device)\n",
     "loss_fn = MSELoss()\n",
-    "optimizer = Adam(model.parameters(), lr=1e-3)"
+    "optimizer = Adam(model.parameters(), lr=1e-3, weight_decay=1e-5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 17,
    "id": "a5c78a44",
    "metadata": {},
    "outputs": [
@@ -109,56 +109,56 @@
      "output_type": "stream",
      "text": [
       "Starting model training on cuda...\n",
-      "Epoch [1/50] Train Loss: 0.6517 Val Loss: nan\n",
-      "Epoch [2/50] Train Loss: 0.4091 Val Loss: nan\n",
-      "Epoch [3/50] Train Loss: 0.3780 Val Loss: nan\n",
-      "Epoch [4/50] Train Loss: 0.3435 Val Loss: nan\n",
-      "Epoch [5/50] Train Loss: 0.3329 Val Loss: nan\n",
-      "Epoch [6/50] Train Loss: 0.3332 Val Loss: nan\n",
-      "Epoch [7/50] Train Loss: 0.3196 Val Loss: nan\n",
-      "Epoch [8/50] Train Loss: 0.3173 Val Loss: nan\n",
-      "Epoch [9/50] Train Loss: 0.3076 Val Loss: nan\n",
-      "Epoch [10/50] Train Loss: 0.2990 Val Loss: nan\n",
-      "Epoch [11/50] Train Loss: 0.2983 Val Loss: nan\n",
-      "Epoch [12/50] Train Loss: 0.2929 Val Loss: nan\n",
-      "Epoch [13/50] Train Loss: 0.2891 Val Loss: nan\n",
-      "Epoch [14/50] Train Loss: 0.2883 Val Loss: nan\n",
-      "Epoch [15/50] Train Loss: 0.2855 Val Loss: nan\n",
-      "Epoch [16/50] Train Loss: 0.2789 Val Loss: nan\n",
-      "Epoch [17/50] Train Loss: 0.2792 Val Loss: nan\n",
-      "Epoch [18/50] Train Loss: 0.2803 Val Loss: nan\n",
-      "Epoch [19/50] Train Loss: 0.2743 Val Loss: nan\n",
-      "Epoch [20/50] Train Loss: 0.2721 Val Loss: nan\n",
-      "Epoch [21/50] Train Loss: 0.2725 Val Loss: nan\n",
-      "Epoch [22/50] Train Loss: 0.2731 Val Loss: nan\n",
-      "Epoch [23/50] Train Loss: 0.2714 Val Loss: nan\n",
-      "Epoch [24/50] Train Loss: 0.2664 Val Loss: nan\n",
-      "Epoch [25/50] Train Loss: 0.2668 Val Loss: nan\n",
-      "Epoch [26/50] Train Loss: 0.2651 Val Loss: nan\n",
-      "Epoch [27/50] Train Loss: 0.2632 Val Loss: nan\n",
-      "Epoch [28/50] Train Loss: 0.2616 Val Loss: nan\n",
-      "Epoch [29/50] Train Loss: 0.2687 Val Loss: nan\n",
-      "Epoch [30/50] Train Loss: 0.2640 Val Loss: nan\n",
-      "Epoch [31/50] Train Loss: 0.2599 Val Loss: nan\n",
-      "Epoch [32/50] Train Loss: 0.2652 Val Loss: nan\n",
-      "Epoch [33/50] Train Loss: 0.2569 Val Loss: nan\n",
-      "Epoch [34/50] Train Loss: 0.2570 Val Loss: nan\n",
-      "Epoch [35/50] Train Loss: 0.2596 Val Loss: nan\n",
-      "Epoch [36/50] Train Loss: 0.2562 Val Loss: nan\n",
-      "Epoch [37/50] Train Loss: 0.2592 Val Loss: nan\n",
-      "Epoch [38/50] Train Loss: 0.2498 Val Loss: nan\n",
-      "Epoch [39/50] Train Loss: 0.2517 Val Loss: nan\n",
-      "Epoch [40/50] Train Loss: 0.2525 Val Loss: nan\n",
-      "Epoch [41/50] Train Loss: 0.2508 Val Loss: nan\n",
-      "Epoch [42/50] Train Loss: 0.2463 Val Loss: nan\n",
-      "Epoch [43/50] Train Loss: 0.2520 Val Loss: nan\n",
-      "Epoch [44/50] Train Loss: 0.2485 Val Loss: nan\n",
-      "Epoch [45/50] Train Loss: 0.2439 Val Loss: nan\n",
-      "Epoch [46/50] Train Loss: 0.2581 Val Loss: nan\n",
-      "Epoch [47/50] Train Loss: 0.2474 Val Loss: nan\n",
-      "Epoch [48/50] Train Loss: 0.2420 Val Loss: nan\n",
-      "Epoch [49/50] Train Loss: 0.2382 Val Loss: nan\n",
-      "Epoch [50/50] Train Loss: 0.2451 Val Loss: nan\n"
+      "Epoch [1/50] Train Loss: 0.4713 Val Loss: nan\n",
+      "Epoch [2/50] Train Loss: 0.3334 Val Loss: nan\n",
+      "Epoch [3/50] Train Loss: 0.3151 Val Loss: nan\n",
+      "Epoch [4/50] Train Loss: 0.3012 Val Loss: nan\n",
+      "Epoch [5/50] Train Loss: 0.2929 Val Loss: nan\n",
+      "Epoch [6/50] Train Loss: 0.2865 Val Loss: nan\n",
+      "Epoch [7/50] Train Loss: 0.2805 Val Loss: nan\n",
+      "Epoch [8/50] Train Loss: 0.2764 Val Loss: nan\n",
+      "Epoch [9/50] Train Loss: 0.2725 Val Loss: nan\n",
+      "Epoch [10/50] Train Loss: 0.2698 Val Loss: nan\n",
+      "Epoch [11/50] Train Loss: 0.2671 Val Loss: nan\n",
+      "Epoch [12/50] Train Loss: 0.2645 Val Loss: nan\n",
+      "Epoch [13/50] Train Loss: 0.2622 Val Loss: nan\n",
+      "Epoch [14/50] Train Loss: 0.2615 Val Loss: nan\n",
+      "Epoch [15/50] Train Loss: 0.2590 Val Loss: nan\n",
+      "Epoch [16/50] Train Loss: 0.2557 Val Loss: nan\n",
+      "Epoch [17/50] Train Loss: 0.2532 Val Loss: nan\n",
+      "Epoch [18/50] Train Loss: 0.2506 Val Loss: nan\n",
+      "Epoch [19/50] Train Loss: 0.2476 Val Loss: nan\n",
+      "Epoch [20/50] Train Loss: 0.2451 Val Loss: nan\n",
+      "Epoch [21/50] Train Loss: 0.2442 Val Loss: nan\n",
+      "Epoch [22/50] Train Loss: 0.2423 Val Loss: nan\n",
+      "Epoch [23/50] Train Loss: 0.2398 Val Loss: nan\n",
+      "Epoch [24/50] Train Loss: 0.2392 Val Loss: nan\n",
+      "Epoch [25/50] Train Loss: 0.2380 Val Loss: nan\n",
+      "Epoch [26/50] Train Loss: 0.2364 Val Loss: nan\n",
+      "Epoch [27/50] Train Loss: 0.2359 Val Loss: nan\n",
+      "Epoch [28/50] Train Loss: 0.2337 Val Loss: nan\n",
+      "Epoch [29/50] Train Loss: 0.2320 Val Loss: nan\n",
+      "Epoch [30/50] Train Loss: 0.2317 Val Loss: nan\n",
+      "Epoch [31/50] Train Loss: 0.2289 Val Loss: nan\n",
+      "Epoch [32/50] Train Loss: 0.2292 Val Loss: nan\n",
+      "Epoch [33/50] Train Loss: 0.2270 Val Loss: nan\n",
+      "Epoch [34/50] Train Loss: 0.2264 Val Loss: nan\n",
+      "Epoch [35/50] Train Loss: 0.2252 Val Loss: nan\n",
+      "Epoch [36/50] Train Loss: 0.2233 Val Loss: nan\n",
+      "Epoch [37/50] Train Loss: 0.2245 Val Loss: nan\n",
+      "Epoch [38/50] Train Loss: 0.2231 Val Loss: nan\n",
+      "Epoch [39/50] Train Loss: 0.2211 Val Loss: nan\n",
+      "Epoch [40/50] Train Loss: 0.2212 Val Loss: nan\n",
+      "Epoch [41/50] Train Loss: 0.2207 Val Loss: nan\n",
+      "Epoch [42/50] Train Loss: 0.2202 Val Loss: nan\n",
+      "Epoch [43/50] Train Loss: 0.2190 Val Loss: nan\n",
+      "Epoch [44/50] Train Loss: 0.2190 Val Loss: nan\n",
+      "Epoch [45/50] Train Loss: 0.2174 Val Loss: nan\n",
+      "Epoch [46/50] Train Loss: 0.2174 Val Loss: nan\n",
+      "Epoch [47/50] Train Loss: 0.2155 Val Loss: nan\n",
+      "Epoch [48/50] Train Loss: 0.2167 Val Loss: nan\n",
+      "Epoch [49/50] Train Loss: 0.2143 Val Loss: nan\n",
+      "Epoch [50/50] Train Loss: 0.2140 Val Loss: nan\n"
      ]
     }
    ],
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "id": "326537b8",
    "metadata": {},
    "outputs": [
@@ -202,7 +202,8 @@
      "text": [
       "Scaler X saved to ../inference/scaler_x.joblib\n",
       "Scaler Y saved to ../inference/scaler_y.joblib\n",
-      "Model saved to ../inference/model_parameters.pth\n"
+      "Model saved to ../inference/model_parameters.pth\n",
+      "Model input dimension saved to ../inference/model_parameters.pth\n"
      ]
     }
    ],
